# tiger-ca

./: README.md  cookiecutter.json
hooks/: post_gen_project.sh
{{cookiecutter.project_slug}}/: Makefile  README.md  app.py  pyproject.toml
{{cookiecutter.project_slug}}/src/domain/: collection.py  {{cookiecutter.model_snake}}.py
{{cookiecutter.project_slug}}/src/driver/: {{cookiecutter.model_snake}}_driver.py
{{cookiecutter.project_slug}}/src/interactor/: {{cookiecutter.model_snake}}_interactor.py
{{cookiecutter.project_slug}}/src/interface/driver/: {{cookiecutter.model_snake}}_driver.py
{{cookiecutter.project_slug}}/src/interface/repository/: {{cookiecutter.model_snake}}_repository.py
{{cookiecutter.project_slug}}/src/interface/usecase/: {{cookiecutter.model_snake}}_usecase.py
{{cookiecutter.project_slug}}/src/repository/: {{cookiecutter.model_snake}}_repository.py
{{cookiecutter.project_slug}}/src/rest/: {{cookiecutter.model_snake}}_resource.py
{{cookiecutter.project_slug}}/tests/repository/: test_{{cookiecutter.model_snake}}_repository.py
{{cookiecutter.project_slug}}/tests/unit/repository/: test_{{cookiecutter.model_snake}}_repository.py
{{cookiecutter.project_slug}}/tests/unit/usecase/: test_{{cookiecutter.model_snake}}_interactor.py
{{cookiecutter.project_slug}}/tests/usecase/: test_{{cookiecutter.model_snake}}_interactor.py
